# redink

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  langgraph.json  pyproject.toml  requirements.txt
cli/: pyproject.toml
cli/redink_cli/: app.py  commands.py  completer.py  config.py  drl_app.py  drl_setup.py  html_annotator.py  pdf_annotator.py  report.py  run.py  welcome.py
core/: pyproject.toml
core/redink_core/: chat.py  evidence.py  figures.py  graph.py  nodes.py  nodes_classify.py  nodes_debate.py  nodes_fetch.py  nodes_helpers.py  nodes_repro.py  nodes_reviewer.py  nodes_synthesis.py  paper7.py  prompts.py  repro.py  reviewer_prompts.py  reviewers.py  schemas.py  tools.py
core/redink_core/drl/: analysis.py  nodes.py  scanners.py
core/tests/: test_nodes_repro.py  test_repro.py  test_repro_integration.py  test_repro_surfacing.py  test_resolve.py  test_schemas_repro.py
docs/superpowers/plans/: 2026-07-10-repro-check.md
docs/superpowers/specs/: 2026-07-10-repro-check-design.md
eval/: README.md  collect_asap.py  confirm_calibration.py  overlap_metric.py  rejudge.py
paper/: cli.py  graph.py  nodes.py  nodes_classify.py  nodes_fetch.py  nodes_helpers.py  nodes_reviewer.py  nodes_synthesis.py  paper7.py  prompts.py  schemas.py  tools.py
