[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p7-reviewer"
version = "0.1.0"
description = "Adversarial pre-submission paper reviewer — red-teams academic papers before publication"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["paper-review", "academic", "llm", "langgraph", "adversarial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
p7review = "paper.cli:main"

[project.urls]
Homepage = "https://github.com/p7dotorg/paper-reviewer"
Issues   = "https://github.com/p7dotorg/paper-reviewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["paper"]

[tool.hatch.build.targets.sdist]
include = ["paper/", "README.md", "pyproject.toml"]
