[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redink"
version = "0.1.0"
description = "Adversarial pre-submission paper red-teamer — finds flaws before a real reviewer does"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["red-team", "paper-review", "academic", "llm", "langgraph", "adversarial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
redink = "paper.cli:main"

[project.urls]
Homepage = "https://github.com/p7dotorg/redink"
Issues   = "https://github.com/p7dotorg/redink/issues"

[tool.hatch.build.targets.wheel]
packages = ["paper"]

[tool.hatch.build.targets.sdist]
include = ["paper/", "README.md", "pyproject.toml"]
