[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redink"
version = "0.1.0"
description = "redink CLI — adversarial paper red-teamer, chat interface"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "redink-core",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
redink = "redink_cli.app:main"

[tool.uv.sources]
redink-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["redink_cli"]

[tool.hatch.build.targets.editable]
dev-mode-dirs = ["."]
