[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redink-core"
version = "0.1.0"
description = "redink LangGraph core — STORM-style adversarial paper red-teamer"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langsmith>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["redink_core"]
