[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redink-core"
version = "0.2.0"
description = "redink LangGraph core — STORM-style adversarial paper red-teamer"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langsmith>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = ["langgraph-cli>=0.1.0", "pytest>=8"]
# podcast generation (paper -> episode). Opt-in: `uv sync --extra pod`.
# Heavy + only needed for /podcast, so kept out of the base install.
pod = [
    "langchain-community>=0.3",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pydub>=0.25",
    "arxiv>=2.0",
    "faiss-cpu>=1.7",
    "tavily-python>=0.3",
    "soundfile>=0.13",
    "piper-tts>=1.4",       # local PT-BR TTS (default, CPU, no key)
    "mistralai>=1.0",       # Voxtral premium TTS (opt-in, needs MISTRAL_API_KEY)
    "elevenlabs>=2.49",     # optional premium TTS
    "openai>=1.0",          # optional OpenAI TTS
]

[tool.hatch.build.targets.wheel]
packages = ["redink_core"]

[tool.pytest.ini_options]
markers = [
    "slow: testes lentos que rodam containers Docker reais (gated em docker_available)",
]
